compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__blocks__block_in_tail_position_with_just_an_assignment.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\npub fn b() {\n  let x = 1\n  {\n    let x = x\n  }\n}\n"
---
----- SOURCE CODE

pub fn b() {
  let x = 1
  {
    let x = x
  }
}


----- COMPILED JAVASCRIPT
export function b() {
  let x = 1;
  return x;
}
