compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__blocks__block_with_parenthesised_expression_returning_from_function.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\npub fn b() {\n  {\n    1 + 2\n  }\n}\n"
---
----- SOURCE CODE

pub fn b() {
  {
    1 + 2
  }
}


----- COMPILED JAVASCRIPT
export function b() {
  return 1 + 2;
}
