compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__blocks__concat_blocks.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\npub fn main(f, a, b) {\n  {\n    a\n    |> f\n  } <> {\n    b\n    |> f\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(f, a, b) {
  {
    a
    |> f
  } <> {
    b
    |> f
  }
}


----- COMPILED JAVASCRIPT
export function main(f, a, b) {
  return (() => {
    let _pipe = a;
    return f(_pipe);
  })() + (() => {
    let _pipe = b;
    return f(_pipe);
  })();
}
