compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__blocks__left_operator_sequence.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\npub fn go() {\n  1 == {\n    1\n    2\n  }\n}\n"
---
----- SOURCE CODE

pub fn go() {
  1 == {
    1
    2
  }
}


----- COMPILED JAVASCRIPT
export function go() {
  return 1 === (() => {
    1;
    return 2;
  })();
}
