compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__blocks__nested_multiexpr_blocks.snap
---
source: compiler-core/src/javascript/tests/blocks.rs
expression: "\npub fn go() {\n  let x = {\n    1\n    {\n      2\n      3\n    }\n  }\n  x\n}\n"
---
----- SOURCE CODE

pub fn go() {
  let x = {
    1
    {
      2
      3
    }
  }
  x
}


----- COMPILED JAVASCRIPT
export function go() {
  let _block;
  {
    1;
    {
      2;
      _block = 3;
    }
  }
  let x = _block;
  return x;
}
